--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@ h1 {
 
 h2 {
     color: #dea98a;
-    text-decoration: underline;
-    text-underline-offset: 10px;
+    border-bottom: 3px solid #dea98a;
+    padding-bottom: 5px;
+    width: 21.5%;
 }
 
 .lefttext {
@@ -32,7 +33,7 @@ h2 {
     text-align: center;
     position: relative;
     left: 25em;
-    bottom: 33em;
+    bottom: 35em;
     width: 30em;
     border: 15px solid #ff9e8e;
     background-color: #ff9e8e;
@@ -45,7 +46,7 @@ h2 {
     line-height: 7em;
     position: relative;
     left: 29.25em; 
-    bottom: 40em;
+    bottom: 42.3em;
     width: 35.1em;
     border: 15px solid white; 
     background-color: white; 
@@ -56,7 +57,7 @@ h2 {
     text-align: center;
     position: relative;
     left: 25em;
-    bottom: 38.8em;
+    bottom: 40.8em;
     width: 30em;
     border: 15px solid #ff9e8e;
     background-color: #ff9e8e;
@@ -68,7 +69,7 @@ h2 {
     line-height: 7em;
     position: relative;
     left: 29.25em; 
-    bottom: 46.6em;
+    bottom: 49em;
     width: 35.1em;
     border: 15px solid white; 
     background-color: white; 
@@ -79,7 +80,7 @@ h2 {
     text-align: center;
     position: relative;
     left: 25em;
-    bottom: 44.5em;
+    bottom: 46.5em;
     width: 30em;
     border: 15px solid #ff9e8e;
     background-color: #ff9e8e;
@@ -91,7 +92,7 @@ h2 {
     line-height: 4.5em;
     position: relative;
     left: 29.25em; 
-    bottom: 53.6em;
+    bottom: 55.7em;
     width: 35.1em;
     border: 15px solid white; 
     background-color: white; 
@@ -102,7 +103,7 @@ h2 {
     text-align: left;
     position: relative;
     left: 26.5em;
-    bottom: 105.9em;
+    bottom: 107.5em;
     width: 14em;
     border: 10px solid #26a6cb;
     background-color: #26a6cb;
@@ -113,7 +114,7 @@ h2 {
     text-align: left;
     position: relative;
     left: 26.5em;
-    bottom: 103em;
+    bottom: 105em;
     width: 16em;
     border: 10px solid #26a6cb;
     background-color: #26a6cb;
@@ -124,7 +125,7 @@ h2 {
     text-align: left;
     position: relative;
     left: 26.5em;
-    bottom: 100.3em;
+    bottom: 102em;
     width: 18em;
     border: 10px solid #26a6cb;
     background-color: #26a6cb;
@@ -135,7 +136,7 @@ h2 {
     text-align: left;
     position: relative;
     left: 26.5em;
-    bottom: 94.8em;
+    bottom: 96.9em;
     width: 20em;
     border: 10px solid #26a6cb;
     background-color: #26a6cb;
@@ -146,7 +147,7 @@ h2 {
     text-align: left;
     position: relative;
     left: 26.5em;
-    bottom: 92em;
+    bottom: 94em;
     width: 17.5em;
     border: 10px solid #26a6cb;
     background-color: #26a6cb;
@@ -157,7 +158,7 @@ h2 {
     text-align: left;
     position: relative;
     left: 26.5em;
-    bottom: 89.3em;
+    bottom: 91.3em;
     width: 15.6em;
     border: 10px solid #26a6cb;
     background-color: #26a6cb;
@@ -168,7 +169,7 @@ h2 {
     text-align: left;
     position: relative;
     left: 26.5em;
-    bottom: 86.5em;
+    bottom: 88.5em;
     width: 18em;
     border: 10px solid #26a6cb;
     background-color: #26a6cb;
